test/corpus/free_form.txt
================================================================================
Closing free form modifier conflicting with standard ranged tags
================================================================================
|example
|_
|end

|_
--------------------------------------------------------------------------------

(document
  (ranged_tag
    (tag_name
      (identifier))
    (content
      (paragraph)))
  (paragraph))

================================================================================
Multi line free form markup
================================================================================
/| t
_| t

|_
--------------------------------------------------------------------------------

(document
  (paragraph)
  (paragraph))

================================================================================
Unclosed free form markup
================================================================================
*| test one

/| test two
_| test three

(the spacing is deliberate)
--------------------------------------------------------------------------------

(document
  (paragraph)
  (paragraph)
  (paragraph))

================================================================================
Closing free form modifier delimiter without surrounding attached modifier
================================================================================
*|some|text|*

/|*some|* text |/

_| some text ||_
--------------------------------------------------------------------------------

(document
  (paragraph
    (bold
      (bold_open)
      (free_form_open)
      (free_form_close)
      (bold_close)))
  (paragraph
    (italic
      (italic_open)
      (free_form_open)
      (bold
        (bold_open)
        (bold_close))
      (free_form_close)
      (italic_close)))
  (paragraph
    (underline
      (underline_open)
      (free_form_open)
      (free_form_close)
      (underline_close))))

================================================================================
Repeating free form modifier delimiter
================================================================================
*||some text|*
--------------------------------------------------------------------------------

(document
  (paragraph
    (bold
      (bold_open)
      (free_form_open)
      (free_form_close)
      (bold_close))))

================================================================================
Failed repeating free form modifier delimiter
================================================================================
*||some text*
--------------------------------------------------------------------------------

(document
  (paragraph
    (bold
      (bold_open)
      (bold_close))))

================================================================================
Invalid free form modifiers
================================================================================
*|some text*

*some text|*
--------------------------------------------------------------------------------

(document
  (paragraph
    (bold
      (bold_open)
      (bold_close)))
  (paragraph
    (bold
      (bold_open)
      (bold_close))))
